# graalvm-reachability-metadata

./: .gitignore  .gitmodules  .grype.yaml  AGENTS.md  CONTRIBUTING.md  COVERAGE.md  LICENSE  README.md  REVIEWING.md  build.gradle  check-library-support.sh  ci.json  ehcache-core-2.5.0.pom  library-and-framework-list-schema.json  library-and-framework-list.json  library-and-framework-support-schema.json  pom.xml  pull_request_template.md  settings.gradle  supported-libraries-schema.json  tmp-log4j.properties  tmp-vmplugin-logging.properties
forge/: .continuation-marker.json  .gitignore  .library_preparation_preflight.json  .library_update_route.json  .library_update_target.json  .pending_metrics.json  .pylintrc  AGENTS.md  DEVELOPING.md  LICENSE  README.md  do-work.sh  do_up_to_date_work.sh  forge_metadata.py  library-preflight-prompt.txt  library-preflight-response.txt  pyproject.toml  requirements.txt  unassign_issues.py
forge/.agents/: grund.toml
forge/ai_workflows/: AGENTS.md  add_new_library_support.py  fix_java_fails.py  fix_java_run_fail.py  fix_javac_fail.py  fix_metadata_codex.py  fix_ni_run.py  fix_post_generation_pi.py  improve_library_coverage.py  java_fail_workflow.py  workflow_finalization.py
forge/benchmarks/: benchmark_runner.py  benchmark_suite.json
forge/ci/: ci.jsonnet
forge/docs/: README.md  agent.md  ai-workflow-testing.md  architecture.md  benchmarking.md  continuation.md  do-work.md  dynamic-access-strategy.md  dynamic-access-workflow.md  e2e.md  fix-java-run-fail.md  functional-spec.md  git-scripts.md  goals.md  grund.md  overview.md  (+7 more)
(+41731 files in other folders)
